fix overflown code

--- a/assets/iframe.css
+++ b/assets/iframe.css
@@ -10,7 +10,6 @@ iframe {
   position:absolute;
 }
 
-.highlight {
-  margin-left: -10%;
-  margin-right: -10%;
+code {
+  overflow: scroll;
 }
